# Projeto

./: README.md  registo.h
Projeto2.0/: CMakeLists.txt  main.cpp  maintest.cpp
Projeto2.0 WW/Projeto2.0/: main.cpp
Projeto2.0 WW/Projeto2.0/Data/: MockIngrediente.csv  MockReceitas.csv  MockRestricoes.csv
Projeto2.0 WW/Projeto2.0/controller/: Controller.cpp  Controller.h
Projeto2.0 WW/Projeto2.0/model/headers/: Client.h  Date.h  FoodFinder.h  User.h  ingrediente.h  ingredienteList.h  receita.h  receitaList.h
Projeto2.0 WW/Projeto2.0/model/sources/: FoodFinder.cpp  receita.cpp  receitaList.cpp
Projeto2.0 WW/Projeto2.0/views/headers/: ClientView.h  IngredienteView.h  RestricoesView.h  Utils.h
Projeto2.0 WW/Projeto2.0/views/sources/: ClientView.cpp  IngredienteView.cpp  ReceitaView.cpp  RestricaoView.cpp  View.cpp
Projeto2.0/Data/: MockClientes.csv  MockIngrediente.csv  MockReceitas.csv
Projeto2.0/controller/: Controller.cpp  Controller.h  controller.cpp  controller.h
Projeto2.0/exception/headers/: DuplicateEntryException.h
Projeto2.0/exception/sources/: InvalidDataException.cpp
Projeto2.0/mockdata/: mockdata.cpp  mockdata.h
Projeto2.0/model/headers/: Client.h  ClientList.h  FoodFinder.h  User.h  ingrediente.h  ingredienteList.h  receita.h
Projeto2.0/model/sources/: Client.cpp  ClientList.cpp  Date.cpp  ingrediente.cpp  ingredienteList.cpp  receitaList.cpp  restricoes.cpp  restricoesList.cpp  user.cpp
Projeto2.0/tests/: testClient.cpp
Projeto2.0/views/headers/: ClientView.h  View.h
Projeto2.0/views/sources/: IngredienteView.cpp  ReceitaView.cpp  RestricaoView.cpp  Utils.cpp  View.cpp
Projeto2.0Tester/: CMakeLists.txt
Projeto2.1/Projeto2.0/: CMakeLists.txt
Projeto2.1/Projeto2.0/controller/: controller.cpp  controller.h
Projeto2.1/Projeto2.0/exception/headers/: InvalidDataException.h
Projeto2.1/Projeto2.0/exception/sources/: DuplicateEntryException.cpp  InvalidDataException.cpp
Projeto2.1/Projeto2.0/model/headers/: Client.h  User.h  receita.h  restricoes.h  restricoesList.h
Projeto2.1/Projeto2.0/model/sources/: Client.cpp  ClientList.cpp  Date.cpp  receita.cpp  restricoesList.cpp
Projeto2.1/Projeto2.0/views/headers/: ReceitaView.h  RestricoesView.h
Projeto2.1/Projeto2.0/views/sources/: ClientView.cpp  ReceitaView.cpp  Utils.cpp  View.cpp
ProjetoAlpha/: CMakeLists.txt  main.cpp
ProjetoAlpha/Mocks/: MockData.h  Mockdata.cpp
ProjetoAlpha/Sources/: Utils.cpp  Views.cpp  ingrediente.cpp  ingredienteList.cpp  preferencias.cpp  receita.cpp
ProjetoAlpha/Sources/controllers/: Controller.cpp
ProjetoAlpha/Sources/model/: Utils.cpp  Views.cpp  data.cpp  ingrediente.cpp  ingredienteList.cpp  ingredienteStockList.cpp  ingredientesStock.cpp  preferencias.cpp  receita.cpp  receitasList.cpp  user.cpp
ProjetoAlpha/Sources/views/: IngredientesView.cpp  favoritosView.cpp  preferenciasView.cpp  receitaView.cpp  registo.cpp  registoview.cpp
ProjetoAlpha/headers/controllers/: controller.h
ProjetoAlpha/headers/exceptions/: DataConsistencyException.h  DuplicatedDataException.h  InvalidDataException.h  Views.cpp  registo.cpp  registoview.cpp
ProjetoAlpha/headers/model/: data.h  favoritos.h  favoritosList.h  ingrediente.h  ingredienteStockList.h  ingredientesList.h  ingredientesStock.h  preferencias.h  preferenciasList.h  receita.h  receitaList.h  user.h
ProjetoAlpha/headers/views/: IngredientesView.h  View.h  Views.cpp  favoritosView.h  preferenciasView.h  receitaView.h  registoView.h  utils.h
ProjetoAlpha/mock/: mockdata.h
ProjetoFinal/: CMakeLists.txt
projeto/: CMakeLists.txt  main.cpp
